# rombob

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rombob/: __init__.py
tests/: test_basic.py
