[project]
name = "rombob"
version = "0.9.0"
description = "A simple library for building complex byte structures."
authors = [
    {name = "loudblow", email = "145815114+loudblow@users.noreply.github.com"}
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "annotated-types (>=0.7.0,<0.8.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-coverage (>=0.0,<0.1)",
    "ruff (>=0.15.7,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "*", from="src"}]
package-mode = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"
line-length = 80

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = false
order-by-type = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
